// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timer /> componentDidUpdate function updates the component when set new props 1`] = `
<Fragment>
  <h3
    className="mx-auto my-2 w-50"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    Weeks: 0 - Days: 0 - Hours: 0 - Minutes: 59 - Seconds: 56
  </h3>
</Fragment>
`;

exports[`<Timer /> componentDidUpdate function updates the component when set new props 2`] = `
<Fragment>
  <h3
    className="mx-auto my-2 w-50"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    Weeks: 0 - Days: 0 - Hours: 0 - Minutes: 29 - Seconds: 56
  </h3>
</Fragment>
`;

exports[`<Timer /> first test 1`] = `
<div
  className="my-2"
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div
    className="spinner-grow mx-1"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
  <div
    className="spinner-grow mx-1"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
  <div
    className="spinner-grow mx-1"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
  <div
    className="spinner-grow mx-1"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
  <div
    className="spinner-grow mx-1"
  >
    <span
      className="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`<Timer /> timer function should match snapshot after Timer finishes 1`] = `
<Fragment>
  <h3
    className="mx-auto my-2 w-50"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    Too Late
  </h3>
</Fragment>
`;

exports[`<Timer /> timer function should match snapshot after Timer set to a day and wait 10 seconds 1`] = `
<Fragment>
  <h3
    className="mx-auto my-2 w-50"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    Weeks: 0 - Days: 0 - Hours: 23 - Minutes: 59 - Seconds: 51
  </h3>
</Fragment>
`;
